# b2b-tooling

./: .gitignore  Project.cmake  README.md  b2bTools.json  cppcon-b2b-talks.txt
doc/: Focus.docx  outline-detailed.md
doc/assets/: Thumbs.db
doc/assets/Sonar Logo/: 00 Read Me.rtf
doc/assets/Sonar Logo/PNG/: Thumbs.db
research/: CMakeLists.txt  Research.cmake
research/src/: soClient.cpp
src/: b2bTools.cpp  b2bTools.h
src/compiler/: cpp11-pendantic.cpp  welcome-syntax.cpp
visual-studio-cmake/: CMakeLists.txt  b2b-tooling.cpp  b2b-tooling.h
